--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Download a Build Artifact'
+name: 'Download a Build Artifact 4.3.0'
 description: 'Download a build artifact that was previously uploaded in the workflow by the upload-artifact action'
 author: 'shaobeichen'
 inputs:
